--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 
 
   "require": {
-    "aura/sqlquery": "2.7.1"
+    "aura/sqlquery": "2.7.1",
+    "league/plates": "^3.4"
   },
 
   "autoload": {
