--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
 
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "App\\Controllers\\": "app/controllers",
+      "App\\Models\\": "app/models"
     }
   }
 }
